# python-unittest-exercise

./: pyproject.toml
.github/workflow/: pytest.yml
test/: test_calculator.py  tmp.ipynb
